connected both HTML files

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Haralds</h1>
     <img src="Screenshot 2025-10-08 093312.png" />
+      <a href="indexx.html">programming-paths</a>
   </body>
 </html>
