--- a/indexx.html
+++ b/indexx.html
@@ -37,5 +37,6 @@
     <li>Embedded sistēmu programmētājs</li>
     <li>Drošības programmatūras izstrādātājs</li>
   </ul>
+  <a href="index.html">Mans Vārds</a>
 </body>
 </html>
